<resources>
    <string name="app_name">E-sell</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_anything">Search anything...</string>
    <string name="city_name">CityName</string>
    <string name="your_location">Your Location</string>
    <string name="price">₹ 11.000.00</string>
    <string name="help">Help &amp; Support</string>
    <string name="setting">Setting</string>
    <string name="contact_information">Contact information</string>
    <string name="country_code">+91</string>
    <string name="country">Country</string>
    <string name="digit">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890</string>
    <string name="phone_number">Phone Number</string>
    <string name="verification">You have verified your email. It\'s important to allow us to securely communicate with you.</string>
    <string name="no_messages_yet">No messages, yet?</string>
    <string name="FirebaseClientid">976776669815-e0qjheg7vaj1364co5bc4sr745qir2pb.apps.googleusercontent.com</string>
    <string name="keep_messages">We will keep messages for any items you are trying to buy in here</string>
    <string name="sell_keep_messages">We will keep messages for any items you are trying to Sell in here</string>
</resources>