<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HomeFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_13mdp"
        android:layout_marginTop="@dimen/_6mdp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/your_location"
        android:textColor="@color/lightblack"
        android:textSize="@dimen/_15font_mdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4mdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_location_on_24"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4mdp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/city_name"
        android:textSize="@dimen/_13font_mdp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="@dimen/_38mdp"
        android:layout_marginTop="@dimen/_6mdp"
        android:layout_marginEnd="@dimen/_13mdp"
        android:autofillHints="true"
        android:background="@drawable/main_search_bg"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawablePadding="@dimen/_6mdp"
        android:elevation="@dimen/_13mdp"
        android:textSize="@dimen/_14font_mdp"
        android:fontFamily="@font/roboto"
        android:hint="@string/search_anything"
        android:inputType="text"
        android:padding="@dimen/_8mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#05000000"
        android:elevation="@dimen/_30mdp"

        android:layout_marginTop="@dimen/_12mdp"
        app:cardCornerRadius="@dimen/_13mdp"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText">

        <ImageView
            android:id="@+id/igHomeCat"
            android:layout_width="@dimen/_48mdp"
            android:layout_height="@dimen/_48mdp"
            android:background="#05000000"
            android:backgroundTint="@color/lightblue"
            android:contentDescription="@string/app_name"
            android:elevation="@dimen/_40mdp"
            android:padding="@dimen/_8mdp"
            android:src="@drawable/category" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txHomecat"
        android:layout_width="0dp"
        android:layout_height="@dimen/_14mdp"
        android:text="All Category"
        android:gravity="center"
        android:textSize="@dimen/_8font_mdp"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="@dimen/_6mdp"
        app:layout_constraintEnd_toEndOf="@+id/cardviewHome"
        app:layout_constraintStart_toStartOf="@+id/cardviewHome"
        app:layout_constraintTop_toBottomOf="@+id/cardviewHome" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHomeCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8mdp"
        android:layout_marginStart="@dimen/_4mdp"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintStart_toEndOf="@+id/cardviewHome"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="Fresh Recomendation"
        android:layout_marginTop="@dimen/_13mdp"
        android:textColor="@color/lightblack"
        android:textSize="@dimen/_15font_mdp"
        app:layout_constraintStart_toStartOf="@+id/cardviewHome"
        app:layout_constraintTop_toBottomOf="@+id/rvHomeCategory" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHomeFreshItems"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>